# toy_json_parser

./: Cargo.toml  README.md  file.txt  file2.txt
src/: lib.rs  models.rs  printer.rs  reader.rs
src/cli/: main.rs
